fix content width on mobile

--- a/template/2/css/style.css
+++ b/template/2/css/style.css
@@ -312,7 +312,7 @@ form {
 }
 
 .canvas_center {
-	text-align: left;
+	width: 100%;
 }
 
 .newsform {
