--- a/template/4/css/style.css
+++ b/template/4/css/style.css
@@ -299,14 +299,7 @@ textarea {
 }
 
 .canvas_center {
-	width: 97%;
-	text-align: left;
-	margin-left: auto;
-	margin-right: 1%;
-}
-
-
-.canvas_right {
+	width: 100%;
 }
 
 .navigation {
