--- a/template/5/css/style.css
+++ b/template/5/css/style.css
@@ -214,15 +214,8 @@ form {
 }
 
 .canvas_center {
-	width: 95%;
-	text-align: left;
-	margin-left: auto;
-	margin-right: 1%;
+	width: 100%;
 }
-
-.canvas_right {
-}
-
 
 .newsform {
 	text-align: left;
