--- a/template/6/css/style.css
+++ b/template/6/css/style.css
@@ -216,10 +216,7 @@ form {
 }
 
 .canvas_center {
-	width: 95%;
-	text-align: left;
-	margin-left: auto;
-	margin-right: 1%;
+	width: 100%;
 }
 
 .canvas_right {
