--- a/template/9/css/style.css
+++ b/template/9/css/style.css
@@ -346,13 +346,7 @@ form {
 }
 
 .canvas_center {
-	width: 75%;
-	text-align: left;
-	margin-left: 0;
-	margin-right: 0;
-}
-
-.canvas_right {
+	width: 100%;
 }
 
 .newsform {
